[project]
name = "dialog_skipper"
version = "2.0"
authors = [{ name = "ZetaDaemon" }]
description = "Skips dialog automatically."

[project.urls]
Changelog = "https://github.com/ZetaDaemon/willow2-sdk-mods/blob/main/dialog_skipper/readme.md#Changelog"

[tool.sdkmod]
name = "Dialog Skipper"
version = "2.0"
license = { name = "GPL3", url = "https://choosealicense.com/licenses/gpl-3.0/" }
download = "https://github.com/ZetaDaemon/willow2-sdk-mods/releases/download/nightly/dialog_skipper.sdkmod"

[tool.sdkmod_release_script]
files = ["*.md", "*.py"]
