[project]
name = "insta_vehicles"
version = "1.0"
authors = [{ name = "ZetaDaemon" }]
description = """\
Allows you to instantly spawn a vehicle like bl4. Only works in maps \
where vehicles are supported and based on mission progress.

Vehicle customisation is still handled through the vehicle station. \
Slot 1 is used for spawning vehicles and selecting the customisation."""

[tool.sdkmod]
name = "Insta Vehicles"
supported_games = ["BL2"]
version = "1.0"
license = { name = "GPL3", url = "https://choosealicense.com/licenses/gpl-3.0/" }
download = "https://github.com/ZetaDaemon/willow2-sdk-mods/releases/download/nightly/insta_vehicles.sdkmod"

[tool.sdkmod_release_script]
files = ["*.md", "*.py"]
